--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Soulset Navigator • Clear Interface</title>
+    <!-- PWA -->
+  <meta name="theme-color" content="#5aa3a6" />
+  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" type="image/png" sizes="192x192" href="soulset-icon-192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="soulset-icon-512.png" />
+  <link rel="apple-touch-icon" href="soulset-icon-512.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Soulset Navigator" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
@@ -516,6 +525,18 @@
       if (productLine) productLine.textContent = 'Product option: —';
       inputEl.focus();
     });
+    // Service worker registration for PWA
+if ("serviceWorker" in navigator) {
+  window.addEventListener("load", () => {
+    navigator.serviceWorker
+      .register("/service-worker.js")
+      .catch((err) => {
+        console.error("SW registration failed:", err);
+      });
+  });
+}
+
+
   </script>
 </body>
 </html>
