--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Soulset Navigator • Clear Interface</title>
-    <!-- PWA -->
-  <meta name="theme-color" content="#5aa3a6" />
-  <link rel="manifest" href="manifest.webmanifest" />
-  <link rel="icon" type="image/png" sizes="192x192" href="soulset-icon-192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="soulset-icon-512.png" />
-  <link rel="apple-touch-icon" href="soulset-icon-512.png" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="apple-mobile-web-app-title" content="Soulset Navigator" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet">
@@ -187,6 +178,130 @@
     .theme-sadness::before { background: radial-gradient(circle, #c9e4ff, #a4c6e5); }
     .theme-inspiration::before { background: radial-gradient(circle, #ffd2e6, #f8a8c6); }
     .theme-neutral::before { background: radial-gradient(circle, #dff7d9, #b8e5b0); }
+
+    /* Sunset Reset CTA */
+    .reset-cta{
+      margin-top:10px;
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      align-items:center;
+    }
+    .btn-reset{
+      padding:8px 14px;
+      font-size:13px;
+      border-radius:999px;
+      display:inline-flex;
+      align-items:center;
+      gap:6px;
+    }
+    .reset-note{
+      font-size:12px;
+      color:var(--muted);
+    }
+
+    .hidden{
+      display:none !important;
+    }
+
+    /* Sunset Reset overlay */
+    .sunset-overlay{
+      position:fixed;
+      inset:0;
+      z-index:30;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+    }
+    .sunset-backdrop{
+      position:absolute;
+      inset:0;
+      background:rgba(6,18,30,0.65);
+      backdrop-filter:blur(10px);
+    }
+    .sunset-panel{
+      position:relative;
+      width:100%;
+      max-width:420px;
+      margin:0 16px;
+      border-radius:22px;
+      padding:18px 18px 20px;
+      background:radial-gradient(circle at top,#ffe0b8,#f3a7ff 35%,#0d1630 80%);
+      color:#fefefe;
+      box-shadow:0 18px 45px rgba(0,0,0,0.55);
+      overflow:hidden;
+    }
+    .sunset-close{
+      position:absolute;
+      top:10px;
+      right:10px;
+      background:rgba(0,0,0,0.35);
+      border:0;
+      width:26px;
+      height:26px;
+      border-radius:999px;
+      cursor:pointer;
+      color:#fefefe;
+      font-size:16px;
+      line-height:1;
+      display:grid;
+      place-items:center;
+    }
+    .sunset-title{
+      font-size:15px;
+      font-weight:700;
+      letter-spacing:0.04em;
+      text-transform:uppercase;
+      opacity:0.95;
+      margin-bottom:4px;
+    }
+    .sunset-sub{
+      font-size:13px;
+      opacity:0.9;
+      margin-bottom:10px;
+    }
+    .sunset-visual{
+      margin-top:6px;
+      margin-bottom:10px;
+      height:120px;
+      border-radius:18px;
+      background:linear-gradient(180deg,#ffd9a1,#ff8ca4 45%,#2b3560 80%);
+      position:relative;
+      overflow:hidden;
+    }
+    .sunset-visual::before{
+      content:"";
+      position:absolute;
+      width:220%;
+      height:220%;
+      top:-60%;
+      left:-40%;
+      background:radial-gradient(circle at 50% 20%,rgba(255,255,255,0.9),rgba(255,255,255,0) 45%);
+      opacity:0.85;
+    }
+    .sunset-timer{
+      display:flex;
+      align-items:baseline;
+      gap:4px;
+      font-size:26px;
+      font-weight:700;
+      margin-bottom:4px;
+    }
+    .sunset-timer span{
+      font-variant-numeric:tabular-nums;
+    }
+    .sunset-phase{
+      font-size:12px;
+      text-transform:uppercase;
+      letter-spacing:0.12em;
+      opacity:0.85;
+      margin-bottom:4px;
+    }
+    .sunset-instruction{
+      font-size:13px;
+      line-height:1.7;
+      opacity:0.95;
+    }
   </style>
 </head>
 <body>
@@ -202,7 +317,7 @@
         />
         <div>
           <h1>The Soulset Navigator</h1>
-          <div class="subtitle">PAW Mode • Prompt · Awareness · Wisdom</div>
+          <div class="subtitle">PAW Mode • Prompt · Awareness · Wisdom · Sunset Reset</div>
         </div>
       </div>
     </header>
@@ -212,7 +327,7 @@
         <h2>Step 1</h2>
         <p class="help">
           Describe your dilemma in one sentence. The navigator will reflect your prompt (P), read your inner field (A),
-          and offer grounded guidance (W).
+          and offer grounded guidance (W). Or use the 30-second Sunset Reset if you just need a quick calm.
         </p>
 
         <textarea id="dilemmaInput" placeholder="E.g.: I’m not sure if I should move to a new city for a job."></textarea>
@@ -227,6 +342,13 @@
             <option value="ar">العربية</option>
           </select>
           <span id="status" class="small" aria-live="polite"></span>
+        </div>
+
+        <div class="reset-cta">
+          <button id="sunsetResetBtn" class="btn ghost btn-reset" type="button">
+            ☀ Sunset Reset (30s)
+          </button>
+          <span class="reset-note">Instant 30-second ritual with sunset + breath.</span>
         </div>
 
         <div id="result" class="result"></div>
@@ -254,6 +376,24 @@
     <div class="footer">© SoulsetJourney • Clear & soothing interface • V7</div>
   </div>
 
+  <!-- Sunset Reset Overlay -->
+  <div id="sunsetOverlay" class="sunset-overlay hidden" aria-hidden="true">
+    <div class="sunset-backdrop"></div>
+    <div class="sunset-panel" role="dialog" aria-modal="true" aria-labelledby="sunsetTitle">
+      <button class="sunset-close" id="sunsetCloseBtn" aria-label="Close Sunset Reset">×</button>
+      <div id="sunsetTitle" class="sunset-title">☀ Sunset Reset · 30 seconds</div>
+      <div class="sunset-sub">1) Look at the light • 2) Breathe • 3) Let it soften.</div>
+      <div class="sunset-visual"></div>
+      <div class="sunset-timer">
+        <span id="sunsetTimer">30</span><span>s</span>
+      </div>
+      <div id="sunsetPhase" class="sunset-phase">Phase 1 • Arrival</div>
+      <div id="sunsetInstruction" class="sunset-instruction">
+        Look at the horizon, notice your shoulders, and take one soft breath.
+      </div>
+    </div>
+  </div>
+
   <script>
     const qs = sel => document.querySelector(sel);
     const inputEl = qs('#dilemmaInput');
@@ -266,6 +406,16 @@
     const themeIconEl = qs('#themeIcon');
     const ritualChip = qs('#ritualChip');
     const productLine = qs('#productLine');
+
+    const sunsetResetBtn = qs('#sunsetResetBtn');
+    const sunsetOverlay = qs('#sunsetOverlay');
+    const sunsetCloseBtn = qs('#sunsetCloseBtn');
+    const sunsetTimerEl = qs('#sunsetTimer');
+    const sunsetPhaseEl = qs('#sunsetPhase');
+    const sunsetInstructionEl = qs('#sunsetInstruction');
+
+    let sunsetInterval = null;
+    let sunsetRemaining = 30;
 
     const themeEmojis = {
       stress: "😰",
@@ -512,6 +662,73 @@
       }
     }
 
+    // Sunset Reset logic
+    function updateSunsetPhaseUI() {
+      if (!sunsetPhaseEl || !sunsetInstructionEl) return;
+
+      if (sunsetRemaining > 20) {
+        sunsetPhaseEl.textContent = "Phase 1 • Arrival";
+        sunsetInstructionEl.textContent =
+          "Just look at the colors and notice your shoulders. Let your gaze soften.";
+      } else if (sunsetRemaining > 10) {
+        sunsetPhaseEl.textContent = "Phase 2 • Breathing 4–6";
+        sunsetInstructionEl.textContent =
+          "Inhale through the nose for 4, exhale through the mouth for 6. Imagine exhaling the day.";
+      } else if (sunsetRemaining > 0) {
+        sunsetPhaseEl.textContent = "Phase 3 • Let it soften";
+        sunsetInstructionEl.textContent =
+          "Whisper inside: “Let it soften.” Keep breathing gently with the fading light.";
+      } else {
+        sunsetPhaseEl.textContent = "Done • Reset complete";
+        sunsetInstructionEl.textContent =
+          "Your reset is complete. You can return to your day a little lighter.";
+      }
+    }
+
+    function startSunsetReset() {
+      if (!sunsetOverlay) return;
+      sunsetOverlay.classList.remove('hidden');
+      sunsetOverlay.setAttribute('aria-hidden', 'false');
+
+      if (sunsetInterval) {
+        clearInterval(sunsetInterval);
+        sunsetInterval = null;
+      }
+
+      sunsetRemaining = 30;
+      if (sunsetTimerEl) {
+        sunsetTimerEl.textContent = String(sunsetRemaining);
+      }
+      updateSunsetPhaseUI();
+
+      sunsetInterval = setInterval(() => {
+        sunsetRemaining -= 1;
+        if (sunsetRemaining < 0) {
+          sunsetRemaining = 0;
+        }
+        if (sunsetTimerEl) {
+          sunsetTimerEl.textContent = String(sunsetRemaining);
+        }
+        updateSunsetPhaseUI();
+
+        if (sunsetRemaining <= 0 && sunsetInterval) {
+          clearInterval(sunsetInterval);
+          sunsetInterval = null;
+        }
+      }, 1000);
+    }
+
+    function closeSunsetReset() {
+      if (sunsetInterval) {
+        clearInterval(sunsetInterval);
+        sunsetInterval = null;
+      }
+      if (sunsetOverlay) {
+        sunsetOverlay.classList.add('hidden');
+        sunsetOverlay.setAttribute('aria-hidden', 'true');
+      }
+    }
+
     btn.addEventListener('click', analyze);
     inputEl.addEventListener('keydown', (e) => {
       if ((e.ctrlKey || e.metaKey) && e.key === 'Enter') analyze();
@@ -525,18 +742,35 @@
       if (productLine) productLine.textContent = 'Product option: —';
       inputEl.focus();
     });
-    // Service worker registration for PWA
-if ("serviceWorker" in navigator) {
-  window.addEventListener("load", () => {
-    navigator.serviceWorker
-      .register("/service-worker.js")
-      .catch((err) => {
-        console.error("SW registration failed:", err);
+
+    if (sunsetResetBtn) {
+      sunsetResetBtn.addEventListener('click', () => {
+        startSunsetReset();
       });
-  });
-}
+    }
+    if (sunsetCloseBtn) {
+      sunsetCloseBtn.addEventListener('click', () => {
+        closeSunsetReset();
+      });
+    }
+    if (sunsetOverlay) {
+      sunsetOverlay.addEventListener('click', (e) => {
+        if (e.target === sunsetOverlay) {
+          closeSunsetReset();
+        }
+      });
+    }
 
-
+    // (optionnel) Service worker registration si tu as un service-worker.js
+    if ("serviceWorker" in navigator) {
+      window.addEventListener("load", () => {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .catch((err) => {
+            console.error("SW registration failed:", err);
+          });
+      });
+    }
   </script>
 </body>
 </html>
