Fix sunset image paths (.jpeg)

--- a/index.html
+++ b/index.html
@@ -578,13 +578,13 @@
 
     // 👉 mets ici les bons noms si différents
     const SUNSET_IMAGES = [
-      "sunset-1.jpg",
-      "sunset-2.jpg",
-      "sunset-3.jpg",
-      "sunset-4.jpg",
-      "sunset-5.jpg",
-      "sunset-6.jpg",
-      "sunset-7.jpg"
+      "sunset-1.jpeg",
+      "sunset-2.jpeg",
+      "sunset-3.jpeg",
+      "sunset-4.jpeg",
+      "sunset-5.jpeg",
+      "sunset-6.jpeg",
+      "sunset-7.jpeg"
     ];
 
     function randomLoadingMessage(langSelected) {
