--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       padding:8px 10px;
       font-size:13px;
       background:#f7fbfb;
-      color:var(--muted);
+      color:#muted;
       outline:none;
     }
 
@@ -549,6 +549,15 @@
     let sunsetInterval = null;
     let sunsetRemaining = 30;
 
+    // Langues supportées & détection du téléphone/navigateur
+    const SUPPORTED_LANGS = ["en", "fr", "es", "ar"];
+    const browserLangCode = (navigator.language || navigator.userLanguage || "en")
+      .slice(0, 2)
+      .toLowerCase();
+    const autoLang = SUPPORTED_LANGS.includes(browserLangCode)
+      ? browserLangCode
+      : "en";
+
     const themeEmojis = {
       stress: "😰",
       fear: "😨",
@@ -754,7 +763,8 @@
       clearBtn.disabled = true;
       langSelect.disabled = true;
 
-      const selectedLang = langSelect.value || "default";
+      const selectedLang = langSelect.value || autoLang || "default";
+
       statusEl.textContent = 'Reading your energy…';
       renderMessage(randomLoadingMessage(selectedLang));
       setTheme('neutral');
@@ -763,7 +773,7 @@
         const res = await fetch('/api/analyze', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ text, lang: langSelect.value })
+          body: JSON.stringify({ text, lang: selectedLang })
         });
         const data = await res.json().catch(() => ({}));
 
@@ -932,6 +942,10 @@
     }
 
     window.addEventListener("load", () => {
+      // si aucune langue n'est choisie, on met celle du téléphone
+      if (langSelect && !langSelect.value && SUPPORTED_LANGS.includes(autoLang)) {
+        langSelect.value = autoLang;
+      }
       shuffleSunsetPhoto();
     });
 
